background photo and some other annoying things

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   <link rel="stylesheet" href= "style.css">
 </head>
 <body>
@@ -16,29 +17,28 @@
     </div>
     <div class="card-white">
       <p>In my free time i like to do a lot of outdoor sports, especially around the coast</p>
-      <p>click this
-        <a href="https://www.google.com/">link</a>
-        to go to Google and learn many things
+      <p>
+        Click this <a href="https://www.google.com/">link</a> to go to Google and learn many things
       </p>
     </div>
     <div class="footer">
       <div class="centre">
-        <button ><a href="https://www.bigredbutton.com.au/">Big Red Button</a></button>
+        <button ><a class="black" href="https://www.bigredbutton.com.au/">Big Red Button</a></button>
       </div>
       <ul class="list-inline">
         <li>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i> Facebook
+          <a href="https://github.com/AngusMcDonald0?tab=repositories">
+            <i class="fa-brands fa-github"></i>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i> Linkedin
+          <a href="https://www.linkedin.com/in/angus-mcdonald-503999149/">
+            <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="fab fa-twitter"></i> Twitter
+          <a href="https://www.instagram.com/angusmcdonald27/">
+            <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
       </ul>
